@@ -374,6 +374,26 @@ name|proto
 operator|.
 name|DataTransferProtos
 operator|.
+name|BlockOpResponseProto
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|proto
+operator|.
+name|DataTransferProtos
+operator|.
 name|Status
 import|;
 end_import
@@ -834,6 +854,34 @@ specifier|private
 name|long
 name|restartBudget
 decl_stmt|;
+comment|/**    * for replaceBlock response    */
+DECL|field|responseInterval
+specifier|private
+specifier|final
+name|long
+name|responseInterval
+decl_stmt|;
+DECL|field|lastResponseTime
+specifier|private
+name|long
+name|lastResponseTime
+init|=
+literal|0
+decl_stmt|;
+DECL|field|isReplaceBlock
+specifier|private
+name|boolean
+name|isReplaceBlock
+init|=
+literal|false
+decl_stmt|;
+DECL|field|replyOut
+specifier|private
+name|DataOutputStream
+name|replyOut
+init|=
+literal|null
+decl_stmt|;
 DECL|method|BlockReceiver (final ExtendedBlock block, final StorageType storageType, final DataInputStream in, final String inAddr, final String myAddr, final BlockConstructionStage stage, final long newGs, final long minBytesRcvd, final long maxBytesRcvd, final String clientname, final DatanodeInfo srcDataNode, final DataNode datanode, DataChecksum requestedChecksum, CachingStrategy cachingStrategy)
 name|BlockReceiver
 parameter_list|(
@@ -979,6 +1027,26 @@ name|getDnConf
 argument_list|()
 operator|.
 name|datanodeSlowIoWarningThresholdMs
+expr_stmt|;
+comment|// For replaceBlock() calls response should be sent to avoid socketTimeout
+comment|// at clients. So sending with the interval of 0.5 * socketTimeout
+name|this
+operator|.
+name|responseInterval
+operator|=
+call|(
+name|long
+call|)
+argument_list|(
+name|datanode
+operator|.
+name|getDnConf
+argument_list|()
+operator|.
+name|socketTimeout
+operator|*
+literal|0.5
+argument_list|)
 expr_stmt|;
 comment|//for datanode, we have
 comment|//1: clientName.length() == 0, and
@@ -3365,6 +3433,63 @@ name|SUCCESS
 argument_list|)
 expr_stmt|;
 block|}
+comment|/*      * Send in-progress responses for the replaceBlock() calls back to caller to      * avoid timeouts due to balancer throttling. HDFS-6247      */
+if|if
+condition|(
+name|isReplaceBlock
+operator|&&
+operator|(
+name|Time
+operator|.
+name|monotonicNow
+argument_list|()
+operator|-
+name|lastResponseTime
+operator|>
+name|responseInterval
+operator|)
+condition|)
+block|{
+name|BlockOpResponseProto
+operator|.
+name|Builder
+name|response
+init|=
+name|BlockOpResponseProto
+operator|.
+name|newBuilder
+argument_list|()
+operator|.
+name|setStatus
+argument_list|(
+name|Status
+operator|.
+name|IN_PROGRESS
+argument_list|)
+decl_stmt|;
+name|response
+operator|.
+name|build
+argument_list|()
+operator|.
+name|writeDelimitedTo
+argument_list|(
+name|replyOut
+argument_list|)
+expr_stmt|;
+name|replyOut
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
+name|lastResponseTime
+operator|=
+name|Time
+operator|.
+name|monotonicNow
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|throttler
@@ -3605,7 +3730,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-DECL|method|receiveBlock ( DataOutputStream mirrOut, DataInputStream mirrIn, DataOutputStream replyOut, String mirrAddr, DataTransferThrottler throttlerArg, DatanodeInfo[] downstreams)
+DECL|method|receiveBlock ( DataOutputStream mirrOut, DataInputStream mirrIn, DataOutputStream replyOut, String mirrAddr, DataTransferThrottler throttlerArg, DatanodeInfo[] downstreams, boolean isReplaceBlock)
 name|void
 name|receiveBlock
 parameter_list|(
@@ -3630,6 +3755,9 @@ parameter_list|,
 name|DatanodeInfo
 index|[]
 name|downstreams
+parameter_list|,
+name|boolean
+name|isReplaceBlock
 parameter_list|)
 throws|throws
 name|IOException
@@ -3659,6 +3787,18 @@ expr_stmt|;
 name|throttler
 operator|=
 name|throttlerArg
+expr_stmt|;
+name|this
+operator|.
+name|replyOut
+operator|=
+name|replyOut
+expr_stmt|;
+name|this
+operator|.
+name|isReplaceBlock
+operator|=
+name|isReplaceBlock
 expr_stmt|;
 try|try
 block|{
