@@ -1820,6 +1820,28 @@ argument_list|(
 name|reply
 argument_list|)
 decl_stmt|;
+while|while
+condition|(
+name|proto
+operator|.
+name|getStatus
+argument_list|()
+operator|==
+name|Status
+operator|.
+name|IN_PROGRESS
+condition|)
+block|{
+name|proto
+operator|=
+name|BlockOpResponseProto
+operator|.
+name|parseDelimitedFrom
+argument_list|(
+name|reply
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|proto
 operator|.
